--- a/package.json
+++ b/package.json
@@ -6,21 +6,14 @@
     "js-sha256 added for faust2webaudio"
   ],
   "dependencies": {
-    "@babel/core": "^7.22.9",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
-    "@ricardo-jrm/use-local-state": "^1.0.1",
     "@shren/faust-ui": "1.1.2",
     "@shren/faustwasm": "^0.0.24",
     "@shren/typed-event-emitter": "1.1.1",
-    "@svgr/webpack": "^8.0.1",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "14.0.0",
-    "@testing-library/user-event": "14.4.3",
     "@types/audiobuffer-to-wav": "1.0.2",
     "@types/dom-mediacapture-record": "1.0.16",
     "@types/emscripten": "^1.39.6",
-    "@types/jest": "29.5.2",
     "@types/node": "18.11.18",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.18",
@@ -30,17 +23,9 @@
     "@webaudiomodules/sdk": "^0.0.11",
     "@webgpu/types": "^0.1.40",
     "audiobuffer-to-wav": "1.0.0",
-    "babel-jest": "^29.5.0",
-    "babel-loader": "^9.1.2",
-    "babel-preset-react-app": "^10.0.1",
-    "buffer": "^6.0.3",
-    "camelcase": "6.3.0",
     "classnames": "^2.3.2",
-    "css-loader": "^6.7.3",
     "d3": "7.8.5",
     "d3-axis": "3.0.0",
-    "dotenv": "^16.3.1",
-    "dotenv-expand": "^10.0.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard-with-typescript": "^39.1.1",
@@ -48,37 +33,22 @@
     "eslint-plugin-react": "^7.33.2",
     "faust-loader-vite": "https://github.com/mrkev/faust-loader-vite#changes",
     "faust2webaudio": "grame-cncm/faust2webaudio",
-    "file-loader": "^6.2.0",
     "firebase": "10.7.1",
-    "fs-extra": "^11.1.1",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.6.2",
-    "jest-resolve": "^29.6.2",
-    "jest-watch-typeahead": "^2.2.2",
     "js-sha256": "^0.9.0",
-    "mini-css-extract-plugin": "^2.7.6",
     "music-metadata-browser": "^2.5.10",
     "nanoid": "^5.0.4",
-    "postcss": "^8.4.21",
-    "postcss-loader": "^6.2.1",
     "react": "18.2.0",
-    "react-app-polyfill": "^3.0.0",
-    "react-dev-utils": "^12.0.1",
     "react-dom": "18.2.0",
     "react-jss": "^10.10.0",
     "react-merge-refs": "^2.1.1",
     "react-refresh": "^0.14.0",
     "react-resizable-panels": "^0.0.55",
     "remixicon": "^3.7.0",
-    "resolve": "^1.22.1",
-    "resolve-url-loader": "^4.0.0",
     "rollup": "^4.9.0",
     "rollup-plugin-polyfill-node": "^0.13.0",
-    "source-map-loader": "^4.0.1",
     "standardized-audio-context": "25.3.28",
+    "standardized-audio-context-mock": "^9.6.32",
     "structured-state": "file:../substate",
-    "style-loader": "^3.3.2",
-    "terser-webpack-plugin": "^5.3.7",
     "tmp-promise": "^3.0.3",
     "typescript": "5.3.3",
     "typescript-json-serializer": "4.2.0",
@@ -86,35 +56,21 @@
     "use-resize-observer": "^9.1.0",
     "uuid": "^9.0.1",
     "vite-plugin-inspect": "^0.8.1",
+    "vitest": "^1.0.4",
     "wam-extensions": "^0.2.3",
     "web-vitals": "3.4.0"
   },
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
-    "test": "node scripts/test.js",
+    "test": "vitest",
     "deploy": "npm run build && firebase deploy --only hosting",
     "publish": "npm run build && firebase deploy --only hosting"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   },
   "devDependencies": {
     "@types/d3": "7.4.3",
     "@types/d3-axis": "3.0.6",
-    "@types/fs-extra": "^11.0.1",
     "@vitejs/plugin-react": "^4.2.1",
-    "babel-plugin-parameter-decorator": "1.0.16",
-    "babel-plugin-transform-typescript-metadata": "0.3.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest-environment-jsdom": "^29.6.2",
     "vite": "^5.0.10",
@@ -125,63 +81,7 @@
   "prettier": {
     "printWidth": 120
   },
-  "jest": {
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "setupFiles": [
-      "react-app-polyfill/jsdom"
-    ],
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/setupTests.ts"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
-    ],
-    "testEnvironment": "jsdom",
-    "transform": {
-      "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.js",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|cjs|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "modulePaths": [],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "web.ts",
-      "ts",
-      "web.tsx",
-      "tsx",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ],
-    "watchPlugins": [
-      "jest-watch-typeahead/filename",
-      "jest-watch-typeahead/testname"
-    ],
-    "resetMocks": true
-  },
   "engines": {
-    "node": ">=14.18"
-  },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
+    "node": ">=18.10"
   }
 }
