--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@shren/typed-event-emitter": "1.1.1",
     "@types/audiobuffer-to-wav": "1.0.4",
     "@types/dom-mediacapture-record": "1.0.19",
-    "@types/emscripten": "^1.39.11",
+    "@types/emscripten": "^1.39.12",
     "@types/node": "18.16.20",
     "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
     "@webaudiomodules/api": "^2.0.0-alpha.6",
     "@webaudiomodules/sdk": "^0.0.11",
     "@webgpu/types": "^0.1.40",
@@ -28,10 +28,10 @@
     "d3-axis": "3.0.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
-    "firebase": "10.11.1",
+    "eslint-plugin-react-compiler": "^0.0.0-experimental-53bb89e-20240515",
+    "firebase": "10.12.0",
     "highlight.js": "^11.9.0",
     "music-metadata-browser": "^2.5.10",
     "nanoid": "^5.0.7",
