--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pamba",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "private": true,
   "//notes": [
     "previously used \"@shren/faust-ui\": \"1.1.2\"",
@@ -37,7 +37,7 @@
     "rollup-plugin-polyfill-node": "^0.13.0",
     "standardized-audio-context": "25.3.77",
     "standardized-audio-context-mock": "^9.7.8",
-    "structured-state": "file:../substate",
+    "structured-state": "file:../substate/packages/structured-state",
     "svgo": "^3.3.2",
     "tmp-promise": "^3.0.3",
     "typescript": "5.5.4",
