--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "vite-plugin-inspect": "^0.8.7",
     "vitest": "^2.1.1",
     "wam-extensions": "^0.2.3",
-    "webgpu-waveform-react": "^1.0.2"
+    "webgpu-waveform": "file:../webgpu-waveform/packages/webgpu-waveform",
+    "webgpu-waveform-react": "file:../webgpu-waveform/packages/webgpu-waveform-react"
   },
   "scripts": {
     "dev": "vite dev",
