--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "highlight.js": "^11.10.0",
     "music-metadata-browser": "^2.5.11",
     "nanoid": "^5.0.7",
+    "prettier": "^3.3.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-jss": "^10.10.0",
@@ -68,7 +69,7 @@
     "eslint": "^9.11.1",
     "eslint-plugin-react": "^7.37.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc-e948a5ac-20240807",
-    "vite": "^5.4.8",
+    "vite": "^5.4.10",
     "vite-plugin-svgr": "^4.2.0",
     "vite-tsconfig-paths": "^5.0.1",
     "web-audio-peak-meter": "^3.1.0"
