--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "typescript-eslint": "^8.14.0",
     "ulid": "^2.3.0",
     "use-resize-observer": "^9.1.0",
+    "vite-plugin-faust": "^1.0.0",
     "vite-plugin-inspect": "^0.8.7",
     "vitest": "^2.1.5",
     "wam-extensions": "^0.2.3",
