--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
-    "@grame/faustwasm": "^0.7.4",
+    "@grame/faustwasm": "^0.7.6",
     "@shren/typed-event-emitter": "1.1.1",
     "@types/audiobuffer-to-wav": "1.0.4",
     "@types/dom-mediacapture-record": "1.0.21",
@@ -31,25 +31,25 @@
     "midi-file": "^1.2.4",
     "music-metadata-browser": "^2.5.11",
     "nanoid": "^5.0.9",
-    "prettier": "^3.4.1",
+    "prettier": "^3.4.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-jss": "^10.10.0",
     "react-markdown": "^9.0.1",
     "remixicon": "^4.5.0",
-    "rollup": "^4.27.4",
+    "rollup": "^4.28.0",
     "rollup-plugin-polyfill-node": "^0.13.0",
     "standardized-audio-context": "25.3.77",
     "standardized-audio-context-mock": "^9.7.14",
     "structured-state": "file:../substate/packages/structured-state",
     "svgo": "^3.3.2",
     "typescript": "5.7.2",
-    "typescript-eslint": "^8.16.0",
+    "typescript-eslint": "^8.17.0",
     "ulid": "^2.3.0",
     "use-resize-observer": "^9.1.0",
     "vite-plugin-faust": "^1.0.0",
-    "vite-plugin-inspect": "^0.8.7",
-    "vitest": "^2.1.6",
+    "vite-plugin-inspect": "^0.10.3",
+    "vitest": "^2.1.8",
     "wam-extensions": "^0.2.3",
     "webgpu-waveform": "file:../webgpu-waveform/packages/webgpu-waveform",
     "webgpu-waveform-react": "file:../webgpu-waveform/packages/webgpu-waveform-react"
@@ -64,19 +64,19 @@
     "publish": "npm run build && firebase deploy --only hosting"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.2.3",
+    "@eslint/compat": "^1.2.4",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.16.0",
     "@types/d3": "7.4.3",
     "@types/d3-axis": "3.0.6",
-    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.16.0",
     "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.1.0-rc-e948a5ac-20240807",
-    "vite": "^5.4.11",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "vite": "^6.0.3",
     "vite-plugin-svgr": "^4.3.0",
-    "vite-tsconfig-paths": "^5.1.2",
+    "vite-tsconfig-paths": "^5.1.3",
     "web-audio-peak-meter": "^3.1.0"
   },
   "prettier": {
