--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "typescript": "5.8.2",
     "typescript-eslint": "^8.27.0",
     "ulid": "^2.4.0",
+    "uuid": "^11.1.0",
     "vite-plugin-faust": "^1.0.0",
     "vite-plugin-inspect": "^11.0.0",
     "vitest": "^3.0.9",
