--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
     "typescript": "5.9.3",
     "typescript-eslint": "^8.46.2",
     "ulid": "^2.4.0",
-    "uuid": "^11.1.0",
+    "uuid": "^13.0.0",
     "vite-plugin-faust": "^1.0.0",
     "vite-plugin-inspect": "^11.3.3",
-    "vitest": "^3.2.4",
+    "vitest": "^4.0.5",
     "wam-extensions": "^0.2.3",
     "webgpu-waveform": "^3.3.0",
     "webgpu-waveform-react": "^3.4.0"
@@ -70,11 +70,12 @@
     "@types/d3": "7.4.3",
     "@types/d3-axis": "3.0.6",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
-    "@vitejs/plugin-react": "^4.7.0",
+    "@vitejs/plugin-react": "^5.1.0",
     "eslint": "^9.38.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "5.2.0",
-    "vite": "^6.4.1",
+    "jsdom": "^27.1.0",
+    "vite": "^7.1.12",
     "vite-plugin-svgr": "^4.5.0",
     "vite-tsconfig-paths": "^5.1.4",
     "web-audio-peak-meter": "^3.1.0"
