--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "classnames": "^2.5.1",
     "d3": "7.9.0",
     "d3-axis": "3.0.0",
+    "eslint-plugin-react-refresh": "^0.4.24",
     "firebase": "12.5.0",
     "midi-file": "^1.2.4",
     "music-metadata-browser": "^2.5.11",
@@ -57,7 +58,7 @@
   "scripts": {
     "dev": "vite dev",
     "tsc": "npx tsc",
-    "lint": "npx eslint .",
+    "lint": "eslint .",
     "build": "vite build",
     "test": "vitest",
     "deploy": "npm run build && firebase deploy --only hosting",
@@ -73,7 +74,7 @@
     "@vitejs/plugin-react": "^5.1.0",
     "eslint": "^9.38.0",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "5.2.0",
+    "eslint-plugin-react-hooks": "7.0.1",
     "jsdom": "^27.1.0",
     "vite": "^7.1.12",
     "vite-plugin-svgr": "^4.5.0",
