--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "standardized-audio-context": "25.3.77",
     "standardized-audio-context-mock": "^9.7.24",
     "structured-state": "file:../substate/packages/structured-state",
+    "marked-subbable": "file:../substate/packages/marked-subbable",
     "svgo": "^3.3.2",
     "typescript": "5.9.3",
     "typescript-eslint": "^8.48.0",
