--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "classnames": "^2.5.1",
     "d3": "7.9.0",
     "d3-axis": "3.0.0",
+    "d3-scale": "^4.0.2",
     "eslint-plugin-react-refresh": "^0.4.24",
     "firebase": "12.6.0",
+    "marked-subbable": "file:../substate/packages/marked-subbable",
     "midi-file": "^1.2.4",
+    "music-metadata": "^11.10.3",
     "music-metadata-browser": "^2.5.11",
     "nanoid": "^5.1.6",
     "prettier": "^3.7.1",
@@ -43,7 +46,6 @@
     "standardized-audio-context": "25.3.77",
     "standardized-audio-context-mock": "^9.7.24",
     "structured-state": "file:../substate/packages/structured-state",
-    "marked-subbable": "file:../substate/packages/marked-subbable",
     "svgo": "^3.3.2",
     "typescript": "5.9.3",
     "typescript-eslint": "^8.48.0",
@@ -70,6 +72,7 @@
     "@eslint/js": "^9.39.1",
     "@types/d3": "7.4.3",
     "@types/d3-axis": "3.0.6",
+    "@types/d3-scale": "^4.0.9",
     "@typescript-eslint/eslint-plugin": "^8.48.0",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
