--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@grame/faustwasm": "^0.13.4",
     "@react-hook/resize-observer": "^2.0.2",
     "@shren/typed-event-emitter": "1.1.1",
+    "@tailwindcss/vite": "^4.1.18",
     "@types/audiobuffer-to-wav": "1.0.4",
     "@types/dom-mediacapture-record": "1.0.22",
     "@types/emscripten": "^1.41.5",
@@ -46,6 +47,7 @@
     "standardized-audio-context-mock": "^9.7.24",
     "structured-state": "file:../substate/packages/structured-state",
     "svgo": "^3.3.2",
+    "tailwindcss": "^4.1.18",
     "typescript": "5.9.3",
     "typescript-eslint": "^8.48.0",
     "ulid": "^2.4.0",
