--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@types/audiobuffer-to-wav": "1.0.4",
     "@types/dom-mediacapture-record": "1.0.22",
     "@types/emscripten": "^1.41.5",
-    "@types/node": "22.19.3",
-    "@types/react": "19.2.7",
+    "@types/node": "22.19.9",
+    "@types/react": "19.2.13",
     "@types/react-dom": "19.2.3",
     "@webaudiomodules/api": "^2.0.0-alpha.6",
     "@webaudiomodules/sdk": "^0.0.12",
-    "@webgpu/types": "^0.1.68",
+    "@webgpu/types": "^0.1.69",
     "audiobuffer-to-wav": "1.0.0",
     "burns-audio-wam": "file:../../burns-audio-wam",
     "classnames": "^2.5.1",
@@ -29,34 +29,34 @@
     "firebase": "12.7.0",
     "marked-subbable": "file:../substate/packages/marked-subbable",
     "midi-file": "^1.2.4",
-    "music-metadata": "^11.10.3",
+    "music-metadata": "^11.11.2",
     "nanoid": "^5.1.6",
-    "prettier": "^3.7.4",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "prettier": "^3.8.1",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
     "react-jss": "^10.10.0",
     "react-markdown": "^10.1.0",
-    "react-router": "^7.11.0",
-    "remixicon": "^4.8.0",
-    "rollup": "^4.54.0",
+    "react-router": "^7.13.0",
+    "remixicon": "^4.9.1",
+    "rollup": "^4.57.1",
     "rollup-plugin-polyfill-node": "^0.13.0",
     "standardized-audio-context": "25.3.77",
     "standardized-audio-context-mock": "^9.7.24",
     "structured-state": "file:../substate/packages/structured-state",
     "tailwindcss": "^4.1.18",
     "typescript": "5.9.3",
-    "typescript-eslint": "^8.50.1",
+    "typescript-eslint": "^8.54.0",
     "ulid": "^3.0.2",
     "uuid": "^13.0.0",
     "vite-plugin-faust": "^2.0.0",
     "vite-plugin-inspect": "^11.3.3",
-    "vitest": "^4.0.16",
+    "vitest": "^4.0.18",
     "wam-extensions": "^0.2.3",
     "webgpu-waveform": "^3.3.0",
     "webgpu-waveform-react": "^3.4.0"
   },
   "scripts": {
-    "dev": "vite dev",
+    "dev": "vite",
     "tsc": "tsc",
     "lint": "eslint .",
     "build": "vite build",
@@ -70,15 +70,15 @@
     "@types/d3": "7.4.3",
     "@types/d3-axis": "3.0.6",
     "@types/d3-scale": "^4.0.9",
-    "@typescript-eslint/eslint-plugin": "^8.50.1",
-    "@vitejs/plugin-react": "^5.1.2",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@vitejs/plugin-react": "^5.1.3",
     "eslint": "^9.39.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "7.0.1",
     "jsdom": "^27.4.0",
-    "vite": "^7.3.0",
+    "vite": "^7.3.1",
     "vite-plugin-svgr": "^4.5.0",
-    "vite-tsconfig-paths": "^6.0.3",
+    "vite-tsconfig-paths": "^6.0.5",
     "web-audio-peak-meter": "^3.1.0"
   },
   "prettier": {
